examples/errors/parsing/sort-pred-missing.cn
fun f : Pred -> Int [spec] = {
  p -> 0
}

main : () [impure] = ()
